<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Octolendar</string>
    <string name="string_sample_progress">_% of the month has passed</string>
    <string name="string_event_name">Name of the event</string>
    <string name="string_comment_label">Your comment</string>
    <string name="string_sample_time">00:00</string>
    <string name="string_edittext_placeholder">-</string>
    <string name="string_rbutton_skip">You can skip it</string>
    <string name="string_rbutton_ugh">Ugh</string>
    <string name="string_rbutton_important">It\'s important</string>
    <string name="string_sample_date">00-00-0000</string>
    <string name="string_settings">Settings</string>
    <string name="string_settings_card_color">Card Color</string>
    <string name="string_rbutton_coral">Coral</string>
    <string name="string_rbutton_lime">Lime</string>
    <string name="string_navbar_title" />
    <string name="string_sample_text">SampleText</string>
    <string name="string_misc_heading"> Octolendar </string>
    <string name="string_copyright">No rights reserved. </string>
    <string name="string_version">Version 0.9.5</string>
    <string name="string_github"><a href="https://github.com/Aredruss/Octolendar">Github</a></string>
    <string name="string_feedback"><a href="https://twitter.com/Aredruss">Feedback</a></string>
    <string name="string_calendar">Calendar</string>
    <string name="string_today">Today</string>
    <string name="string_timeline">Timeline</string>
    <string name="string_misc">Info</string>
    <string name="string_bored">I am bored</string>
    <string name="string_url">http://www.boredapi.com/api/activity</string>
    <string name="string_bored_button">Find something to do</string>
    <string name="string_done">Done</string>
    <string name="string_save">Save</string>
    <string name="string_time_select">Select time</string>
    <string name="string_end_time">Is a long event</string>
    <string name="string_notification_label">Set a reminder</string>
    <string name="string_date_select">Select date</string>
    <string name="string_not_done">Not done yet</string>
    <string name="string_notification_info">Click the button to set a reminder</string>
    <string name="string_something_to_do">Please don\'t take any advice coming from the Internet.</string>
    <string name="string_part">Number of participants</string>
    <string name="string_tag">Edit tags</string>
    <string name="string_tag_placeholder">Tag title</string>
</resources>
