<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:id="@+id/formLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
       >

        <LinearLayout
            android:id="@+id/headingLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/droid_sans_mono"
                android:hint="@string/string_event_name"
                android:inputType="text"
                android:maxLength="16"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/droid_sans_mono"
                android:freezesText="true"
                android:hint="@string/string_comment_label"
                android:inputType="text"
                android:justificationMode="none"
                android:maxLength="20"
                android:singleLine="true"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <RadioGroup
                android:id="@+id/urgencyRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/skipRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/droid_sans_mono"
                    android:text="@string/string_rbutton_skip" />

                <RadioButton
                    android:id="@+id/ughRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/droid_sans_mono"
                    android:text="@string/string_rbutton_ugh" />

                <RadioButton
                    android:id="@+id/importantRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/droid_sans_mono"
                    android:text="It's important" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/startTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:fontFamily="@font/droid_sans_mono"
            android:text="@string/string_time_select"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>